--- a/index.html
+++ b/index.html
@@ -3,13 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shajjad Khan</title>
+
+    <!-- font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+<!-- font -->
+
+
+
+
+<link rel="stylesheet" href="Style.css">
+
+
+
 </head>
 <body>
 
     <!-- header -->
 
     <header>
+        <nav>
+            <h3 class="nav-title">Shajjad Khan</h3>
+
+            <ul>
+<li><a href="#">Portfolio</a></li>
+<li><a href="#">Projects</a></li>
+<li><a href="#">Blog</a></li>
+
+
+
+            </ul>
+
+
+
+
+
+        </nav>
 
     </header>
 
