social media added

--- a/index.html
+++ b/index.html
@@ -26,10 +26,32 @@
             <div>
                 <h3 class="banner greeting">Hi, I'm</h3>
                 <h1 class="banner-title">Shajjad Khan</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cumque delectus facere alias ex perferendis, laudantium non velit ipsum vitae optio voluptatem, illum earum nisi natus. Laudantium animi accusantium inventore!</p>
+                <p>I am a versatile professional, skilled in web development, marketing strategy analysis, and content creation. With expertise in creating visually appealing websites, optimizing digital marketing campaigns, and crafting engaging content, I deliver impactful digital solutions that enhance brand presence and drive results.</p>
                 <button>Hire Me</button>
                 <button>Download CV</button>
                 <button>Contact</button>
+                <br>
+                <div>  
+                    <div class="social">
+                    <!-- Buttons -->
+<a  href="https://www.facebook.com/shajjadkhan.me/" target="_blank"><img src="Photo/Icon/Facebook.png" alt="Facebook" class="qw" ></a>
+
+<a  href="https://wa.me/message/NVYBU2BGZZLKN1" target="_blank"><img src="Photo/Icon/Whats App.png" alt="Whats App" class="qw"></a>
+
+<a  href="https://youtube.com/@shajjadkhan.m" target="_blank"><img src="Photo/Icon/Youtube.png" alt="Youtube" class="qw"></a>
+
+<a  href="https://twitter.com/shajjadkhanme" target="_blank"><img src="Photo/Icon/Twitter.png" alt="Twitter" class="qw"></a>
+
+<a  href="https://www.instagram.com/shajjadkhan.me" target="_blank"><img src="Photo/Icon/Instagram.png" alt="Instagram" class="qw"></a>
+
+<a  href="https://www.tiktok.com/@shajjadkhan.me" target="_blank"><img src="Photo/Icon/Tiktok.png" alt="Tiktok" class="qw"></a>
+
+<a  href="https://www.linkedin.com/in/shajjad-khan/" target="_blank" ><img src="Photo/Icon/Linked In.png" alt="LinkedIn" class="qw"></a>
+
+
+<!-- Buttons -->
+                </div>
+            </div>
             </div>
             <img class="site-photo"  src="photo/Shajjad Khan.me.png" alt="Shajjad Khan">
         </div>
