--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<meta name="author" content="Author name Shajjad Khan. Who is a web developer, marketing strategist, and content creator. ">
+	<meta name="Linkedin profile" content="https://www.linkedin.com/in/shajjad-khan/" >
+	<!-- To give information about author or owner -->
+	<meta name="Shajjad Khan "
+	content="Welcome to my personal website! I am a web developer, marketing strategist, and content creator. I specialize in creating visually stunning websites, developing effective marketing strategies, and crafting engaging content. Whether you're a business owner, an aspiring content creator, or someone looking to make an impact online, I have the skills and expertise to help you succeed. From responsive designs to seamless navigation, I ensure that your website stands out. With in-depth market research, I develop custom marketing strategies tailored to your goals. From SEO to social media campaigns, I can help you reach your target audience. As a creative content creator, I produce compelling narratives across platforms. Let's work together to transform your online presence. Visit my website to explore my services and portfolio. Contact me today and let's bring your ideas to life!">
+	<!-- to explain about website in few words -->
+
+
     <title>Shajjad Khan</title>
 
 <link rel="stylesheet" href="Style.css">
