icon problem fixed

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                 <div>  
                     <div class="social">
                     <!-- Buttons -->
-<a  href="https://www.facebook.com/shajjadkhan.me/" target="_blank"><img src="Photo/Icon/Facebook.png" alt="Facebook" class="qw" ></a>
+<a  href="https://www.facebook.com/shajjadkhan.me/" target="_blank"><img src="photo/Icon/Facebook.png" alt="Facebook" class="qw" ></a>
 
-<a  href="https://wa.me/message/NVYBU2BGZZLKN1" target="_blank"><img src="Photo/Icon/Whats App.png" alt="Whats App" class="qw"></a>
+<a  href="https://wa.me/message/NVYBU2BGZZLKN1" target="_blank"><img src="photo/Icon/WhatsApp.png" alt="WhatsApp" class="qw"></a>
 
-<a  href="https://youtube.com/@shajjadkhan.m" target="_blank"><img src="Photo/Icon/Youtube.png" alt="Youtube" class="qw"></a>
+<a  href="https://youtube.com/@shajjadkhan.m" target="_blank"><img src="photo/Icon/Youtube.png" alt="Youtube" class="qw"></a>
 
-<a  href="https://twitter.com/shajjadkhanme" target="_blank"><img src="Photo/Icon/Twitter.png" alt="Twitter" class="qw"></a>
+<a  href="https://twitter.com/shajjadkhanme" target="_blank"><img src="photo/Icon/Twitter.png" alt="Twitter" class="qw"></a>
 
-<a  href="https://www.instagram.com/shajjadkhan.me" target="_blank"><img src="Photo/Icon/Instagram.png" alt="Instagram" class="qw"></a>
+<a  href="https://www.instagram.com/shajjadkhan.me" target="_blank"><img src="photo/Icon/Instagram.png" alt="Instagram" class="qw"></a>
 
-<a  href="https://www.tiktok.com/@shajjadkhan.me" target="_blank"><img src="Photo/Icon/Tiktok.png" alt="Tiktok" class="qw"></a>
+<a  href="https://www.tiktok.com/@shajjadkhan.me" target="_blank"><img src="photo/Icon/Tiktok.png" alt="Tiktok" class="qw"></a>
 
-<a  href="https://www.linkedin.com/in/shajjad-khan/" target="_blank" ><img src="Photo/Icon/Linked In.png" alt="LinkedIn" class="qw"></a>
+<a  href="https://www.linkedin.com/in/shajjad-khan/" target="_blank" ><img src="photo/Icon/LinkedIn.png" alt="LinkedIn" class="qw"></a>
 
 
 <!-- Buttons -->
