--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Shajjad Khan</h3>
             <ul>
@@ -35,7 +35,7 @@
             <div>
                 <h3 class="banner greeting">Hi, I'm</h3>
                 <h1 class="banner-title">Shajjad Khan</h1>
-                <p>I am a versatile professional, skilled in web development, marketing strategy analysis, and content creation. With expertise in creating visually appealing websites, optimizing digital marketing campaigns, and crafting engaging content, I deliver impactful digital solutions that enhance brand presence and drive results.</p>
+                <p >I am a versatile professional, skilled in web development, marketing strategy analysis, and content creation. With expertise in creating visually appealing websites, optimizing digital marketing campaigns, and crafting engaging content, I deliver impactful digital solutions that enhance brand presence and drive results.</p>
                 <button>Hire Me</button>
                 <button>Download CV</button>
                 <button>Contact</button>
@@ -43,7 +43,7 @@
                 <div>  
                     <div class="social">
                     <!-- Buttons -->
-<a  href="https://www.facebook.com/shajjadkhan.me/" target="_blank"><img src="photo/Icon/Facebook.png" alt="Facebook" class="qw" ></a>
+<a  href="https://www.facebook.com/shajjadkhan.me/"  target="_blank"><img src="photo/Icon/Facebook.png" alt="Facebook" class="qw" ></a>
 
 <a  href="https://wa.me/message/NVYBU2BGZZLKN1" target="_blank"><img src="photo/Icon/WhatsApp.png" alt="WhatsApp" class="qw"></a>
 
@@ -62,11 +62,8 @@
                 </div>
             </div>
             </div>
-            <img class="site-photo"  src="photo/Shajjad Khan.me.png" alt="Shajjad Khan">
+            <img class="site-photo"  src="photo/Shajjad Khan.png" alt="Shajjad Khan">
         </div>
-
-
-
 
     </header>
     
