about section added

--- a/index.html
+++ b/index.html
@@ -66,8 +66,20 @@
         </div>
 
     </header>
+    <hr>
+    <main>
+        <section class="about-me" >
+            <h3 class="about">About Me</h3>
+            <p class="about-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consectetur quas nam soluta nobis libero, animi incidunt necessitatibus optio, maiores non eius voluptatibus numquam fugiat modi omnis nihil expedita cupiditate!
+            </p>
+
+
+
+        </section>
     
-    <main></main>
+    
+    </main>
 
     <footer></footer>
 
