about info added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,32 @@
             </p>
 
 
+            <div class="about-info-container">
+
+
+
+
+            <div class="about-info">
+                <h4 class="info-title">Name:</h4>
+                <p class="info-description">Shajjad Khan</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Email:</h4>
+                <p class="info-description">contact@shajjadkhan.com</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Contact:</h4>
+                <p class="info-description">+0123456789</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">From:</h4>
+                <p class="info-description">Meherpur, Khulna, Bangladesh.</p>
+            </div>
+
+        </div>
+
+
+
 
         </section>
     
