--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <hr>
     <main>
         <section class="about-me" >
-            <h3 class="about">About Me</h3>
+            <h3 class="about" class="d-title">About Me</h3>
             <p class="about-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consectetur quas nam soluta nobis libero, animi incidunt necessitatibus optio, maiores non eius voluptatibus numquam fugiat modi omnis nihil expedita cupiditate!
             </p>
@@ -100,6 +100,42 @@
         </div>
 
 
+
+
+        </section>
+        <hr>
+
+        <!-- what i do -->
+
+        <section class="wido">
+
+            <h3  class="wido-title" >What I do</h3>
+            <p class="wido-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt a magni, in odio officia quasi itaque, pariatur, voluptates id nulla aut suscipit cumque natus adipisci quod iste quis hic laudantium.</p>
+
+            <div class="skill-container">
+
+            <div class="skill">
+                <img src="photo/icons/js.png" alt="java script">
+                <h3 class="skill-title">Vanill JavaScripta</h3>
+                <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid eveniet atque tempora nobis, autem dolorum aspernatur! Dolor, minus voluptates! Ipsam minima sequi totam praesentium sunt, debitis tempore ea atque blanditiis!</p>
+            </div>
+            <div class="skill">
+                <img src="photo/icons/react.png" alt="">
+                <h3 class="skill-title">React</h3>
+                <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione soluta ex ut fuga est distinctio, deserunt tempore laudantium doloremque rem perferendis ullam omnis reiciendis, accusantium ipsam in illo repudiandae ipsa!</p>
+            </div>
+            <div class="skill">
+                <img src="photo/icons/nodejs.png" alt="">
+                <h3 class="skill-title">Node.Js</h3>
+                <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi consequuntur accusamus earum vero quam, sit quo quas laudantium corrupti, soluta, quod mollitia natus similique omnis repellat dolorum ut explicabo quasi.</p>
+            </div>
+            <div class="skill">
+                <img src="photo/icons/mongo.png" alt="">
+                <h3 class="skill-title">MongoDB</h3>
+                <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero fugiat libero blanditiis, quam molestiae neque reprehenderit illo facilis provident quos repellendus laboriosam sequi recusandae et accusamus explicabo voluptatum reiciendis in?</p>
+            </div>
+
+        </div>
 
 
         </section>
