--- a/index.html
+++ b/index.html
@@ -139,7 +139,18 @@
 
 
         </section>
-        <h3 class="resume-title">Summary of my resume</h3>
+        <h3 class="resume-title">Summary Of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h4 class="resume-column-title">My Education</h4>
+          </div>
+          <div class="resume-column">
+            <h4 class="resume-column-title">My Experience</h4>
+          </div>
+
+
+
+        </div>
     
     
     </main>
