--- a/index.html
+++ b/index.html
@@ -139,10 +139,34 @@
 
 
         </section>
-        <h3 class="resume-title">Summary Of My Resume</h3>
+        <h3 class="resume-title"><pre> Summary of My Resume</pre></h3>
         <div class="resume-container">
           <div class="resume-column">
             <h4 class="resume-column-title">My Education</h4>
+
+            <div class="resume-item">
+                <h2 class="resume-item-title">Masters in Computer Engineer</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015-2017 </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, molestiae quo voluptatum eius adipisci nisi dolorem fugiat incidunt earum id sit iste reiciendis illum vel ipsam aliquam culpa laudantium corrupti.</p>
+            </div>
+
+            <hr>
+
+            <div class="resume-item">
+                <h2 class="resume-item-title">Masters in Computer Engineer</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015-2017 </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, molestiae quo voluptatum eius adipisci nisi dolorem fugiat incidunt earum id sit iste reiciendis illum vel ipsam aliquam culpa laudantium corrupti.</p>
+            </div>
+
+            <hr>
+
+            <div class="resume-item">
+                <h2 class="resume-item-title">Masters in Computer Engineer</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015-2017 </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, molestiae quo voluptatum eius adipisci nisi dolorem fugiat incidunt earum id sit iste reiciendis illum vel ipsam aliquam culpa laudantium corrupti.</p>
+            </div>
+
+           
           </div>
           <div class="resume-column">
             <h4 class="resume-column-title">My Experience</h4>
