footer besic link added

--- a/index.html
+++ b/index.html
@@ -250,7 +250,52 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+
+<div class="footer-column">
+<h3 class="footer-section-title"> Let's Connect</h3>
+<p class="footer-section-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde illum, odio explicabo odit ullam illo deserunt aperiam alias quas exercitationem quod molestiae placeat error quia sed, eum tempora, deleniti at.</p>
+
+
+<!-- social icons -->
+
+<div class="footer-social-links">
+<a href="https://www.facebook.com/shajjadkhan.me/" target="_blank"><img
+    src="photo/Icon/Facebook.png" alt="Facebook" class="qw"></a>
+
+<a href="https://wa.me/message/NVYBU2BGZZLKN1" target="_blank"><img
+    src="photo/Icon/WhatsApp.png" alt="WhatsApp" class="qw"></a>
+
+<a href="https://youtube.com/@shajjadkhan.m" target="_blank"><img src="photo/Icon/Youtube.png"
+    alt="Youtube" class="qw"></a>
+
+<br>
+
+<a href="https://twitter.com/shajjadkhanme" target="_blank"><img src="photo/Icon/Twitter.png"
+    alt="Twitter" class="qw"></a>
+
+<a href="https://www.instagram.com/shajjadkhan.me" target="_blank"><img
+    src="photo/Icon/Instagram.png" alt="Instagram" class="qw"></a>
+
+<a href="https://www.tiktok.com/@shajjadkhan.me" target="_blank"><img
+    src="photo/Icon/Tiktok.png" alt="Tiktok" class="qw"></a>
+
+<a href="https://www.linkedin.com/in/shajjad-khan/" target="_blank"><img
+    src="photo/Icon/LinkedIn.png" alt="LinkedIn" class="qw"></a>
+
+</div>
+<!-- social icons -->
+</div>
+
+
+<div class="footer-column">
+    <h3 class="footer-section-title">Let's Massage Me</h3>
+    <p class="footer-section-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae voluptas dicta beatae ad dolores, esse cum ullam maxime sint dignissimos, qui molestiae aliquam placeat laboriosam odit quia quaerat accusamus soluta.</p>
+</div>
+
+
+
+    </footer>
 
 
 
