--- a/index.html
+++ b/index.html
@@ -36,16 +36,20 @@
 
         <div class="banner">
             <div>
-                <h3 class="banner greeting">Hi, I'm</h3>
+                <h3 class="banner-greeting">Hi, I'm</h3>
                 <h1 class="banner-title">Shajjad Khan</h1>
-                <p>I am a versatile professional, skilled in web development, marketing strategy analysis, and content
+                <p class="banner-description">I am a versatile professional, skilled in web development, marketing strategy analysis, and content
                     creation. With expertise in creating visually appealing websites, optimizing digital marketing
                     campaigns, and crafting engaging content, I deliver impactful digital solutions that enhance brand
                     presence and drive results.</p>
-                <button>Hire Me</button>
+                
+                <div class="banner-btn">
+                    <button>Hire Me</button>
                 <button>Download CV</button>
                 <button>Contact</button>
-                <br>
+
+            </div>
+            
                 <div>
                     <div class="social">
                         <!-- Buttons -->
