--- a/index.html
+++ b/index.html
@@ -306,6 +306,12 @@
             <p class="footer-section-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
                 voluptas dicta beatae ad dolores, esse cum ullam maxime sint dignissimos, qui molestiae aliquam placeat
                 laboriosam odit quia quaerat accusamus soluta.</p>
+                <form>
+                    <input type="text" placeholder="Name">
+                    <input type="email" name="Email" placeholder="Email" id="email-1">
+                    <textarea name="" id="text-1" cols="30" rows="10">Massage</textarea>
+                    <input type="submit" value="">
+                </form>
         </div>
 
 
