--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <input type="text" placeholder="Name">
                     <input type="email" name="Email" placeholder="Email" id="email-1">
                     <textarea name="" id="text-1" cols="30" rows="10">Massage</textarea>
-                    <input type="submit" value="">
+                    <input type="submit" value="submit" placeholder="Submit">
                 </form>
         </div>
 
