--- a/index.html
+++ b/index.html
@@ -303,13 +303,11 @@
 
         <div class="footer-column">
             <h3 class="footer-section-title">Let's Massage Me</h3>
-            <p class="footer-section-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
-                voluptas dicta beatae ad dolores, esse cum ullam maxime sint dignissimos, qui molestiae aliquam placeat
-                laboriosam odit quia quaerat accusamus soluta.</p>
+            
                 <form>
                     <input type="text" placeholder="Name">
                     <input type="email" name="Email" placeholder="Email" id="email-1">
-                    <textarea name="" id="text-1" cols="30" rows="10">Massage</textarea>
+                    <textarea name="Massage" id="text-1" cols="30" rows="10" placeholder="Massage"></textarea>
                     <input type="submit" value="submit" placeholder="Submit">
                 </form>
         </div>
